--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ env:
  - FLASK=0.10.1
 install:
  - pip install -r requirements.txt
-
+services:
+ - mongodb
+before_script:
+ - sleep 15
 script:
  - python manage.py test
